Resolve spacing issue with page main content after adjusting position properties of the header

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@
 }
 
 .back-to-btn {
+  margin-top: 15rem;
   margin-bottom: 1rem;
 }
 
