--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -2,7 +2,7 @@
     background-color: #F2F1F2;
     padding: 4rem;
     text-align: center;
-    margin: 0 5% 16rem 5%;
+    margin: 15rem 5% 16rem 5%;
 }
 
 /* .shop h1 {
